--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,23 @@ body{
   font-family: 'Montserrat', sans-serif;
   overflow-x: hidden;
 }
+
+::-webkit-scrollbar{
+  width: .60rem;
+  background-color: rgba(248, 171, 242, 0.2);
+}
+
+::-webkit-scrollbar:horizontal{
+  width: .30rem;
+  height: 8px!important;
+  background-color: rgba(248, 171, 242, 0.2);
+}
+
+::-webkit-scrollbar-thumb{
+  background-color:rgba(95, 85, 206, 0.3) ;
+  border-radius: .5rem;
+}
+
+::-webkit-scrollbar-thumb:hover{
+  background-color: var(--text-color-light);
+}
