--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@ body{
 
 ::-webkit-scrollbar{
   width: .60rem;
+  display: none;
   background-color: rgba(248, 171, 242, 0.2);
 }
 
@@ -28,4 +29,12 @@ body{
 
 ::-webkit-scrollbar-thumb:hover{
   background-color: var(--text-color-light);
+}
+
+
+@media screen and (min-device-width:300px) and (max-device-width:480px){ 
+  /* canvas{
+    width: 100px;
+    height: 100px;
+  } */
 }
